<resources>
    <string name="app_name">Movie Rental</string>
    <string name="comapnyName">blockbusters</string>
    <string name="newaccount">Create New Account</string>
    <string name="Name">Name</string>
    <string name="exmplename">Jonas Moshi</string>
    <string name="birthday">Date of Birth</string>
    <string name="next">Next</string>
    <string name="step1">STEP 1/3</string>
    <string name="address">Address</string>
    <string name="nic">NIC</string>
    <string name="sex">Sex</string>
    <string name="personaldetails">Personal Details</string>
    <string name="age">Age</string>
    <string name="interests">Interests</string>
    <string name="movie_pref">Movie Preference</string>
    <string name="register">Register</string>

    <string-array name="category_array">
        <item>Action</item>
        <item>Adventure</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Drama</item>
        <item>Fantasy</item>
        <item>Historical</item>
        <item>Historical fiction</item>
        <item>Horror</item>
        <item>Magical realism</item>
        <item>Mystery</item>
        <item>Bewildered</item>
        <item>Paranoid fiction</item>
        <item>Political</item>
        <item>Romance</item>
        <item>Saga</item>
        <item>Satire</item>
        <item>Science fiction</item>
        <item>Social</item>
        <item>Speculative</item>
        <item>Thriller</item>
        <item>Urban</item>
        <item>Western</item>
    </string-array>
</resources>
