<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="414dp"
        android:layout_height="359dp"
        android:layout_marginStart="196dp"
        android:layout_marginBottom="108dp"
        android:baselineAlignBottom="true"
        app:layout_constraintBottom_toTopOf="@+id/editName"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rec" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="299dp"
        android:layout_height="216dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="212dp"
        android:baselineAlignBottom="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNextTwo"
        app:srcCompat="@drawable/rec" />

    <TextView
        android:id="@+id/mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/comapnyName"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/newaccount"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainText" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/colorWhite"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressText" />

    <TextView
        android:id="@+id/addressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/Name"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editDOB"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/colorWhite"
        android:ems="10"
        android:inputType="date"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nicText" />

    <TextView
        android:id="@+id/nicText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/birthday"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <Button
        android:id="@+id/btnNextTwo"
        android:layout_width="301dp"
        android:layout_height="56dp"
        android:layout_marginTop="44dp"
        android:autoText="true"
        android:background="@color/colorWhite"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDOB" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="90dp"
        android:layout_height="41dp"
        app:layout_constraintBottom_toTopOf="@+id/mainText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/step13" />

</androidx.constraintlayout.widget.ConstraintLayout>